<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alertdialogbtn"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_error_24"
        android:text="@string/header"
        android:textAlignment="center"
        android:drawablePadding="@dimen/ten_dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/messaggg"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_seventeen"
            android:gravity="center"
            android:text="@string/are_you_want_to_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/positive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="@dimen/five_dp"
            android:layout_marginEnd="@dimen/five_dp"
            android:background="@drawable/buttondesign1"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/continue1" />

        <Button
            android:id="@+id/negativebutton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="@dimen/five_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:background="@drawable/buttondesign"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </LinearLayout>

</LinearLayout>

