<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/coloret"
    tools:context=".model.DataSelection">



        <LinearLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/zero_dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twenty_dp"
                android:gravity="center"
                android:text="@string/data_selection_detail"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/twenty_sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/conect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Disconnect"
                app:srcCompat="@drawable/disconnected7"
                android:background="@null"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/getNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="get IMEI Number"
                android:background="@null" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BLE Name :"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/namedevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ten_dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sixteen_sp" />
    </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay1"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer_name"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mt"
            android:textColor="@color/textColorPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay2"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_type"
            android:id="@+id/mntxt"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dt"
            android:textColor="@color/textColorPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay3"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_name"
            android:id="@+id/bledevicetxt"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mname"
            android:textColor="@color/textColorPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay4"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_number"
            android:id="@+id/dgpstxt"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mnumber"
            android:textColor="@color/textColorPrimary"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay5"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_speed"
            android:layout_marginStart="@dimen/twenty_dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logminute"
            android:hint="@string/minutes"
            android:gravity="center"
            android:layout_marginStart="@dimen/twenty_dp"
            android:layout_width="@dimen/hundred_dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:enabled="false"
            android:editable="false"
            android:focusable="false"/>

        <EditText
            android:id="@+id/second"
            android:hint="Second"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="10"
            android:enabled="false"
            android:editable="false"
            android:focusable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay6"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lay5"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload Speed"
            android:layout_marginLeft="20dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/uploadminute"
            android:hint="Minutes"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:enabled="false"
            android:editable="false"
            android:focusable="false"/>

        <EditText
            android:id="@+id/uploadsecond"
            android:hint="Second"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="20"
            android:enabled="false"
            android:editable="false"
            android:focusable="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_30ssp"
            android:background="@drawable/rectangle"
            android:onClick="datasend"
            android:text="data registration" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/_10ssp"
        android:layout_gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/black"
            android:text="Logged In:- "/>

        <TextView
            android:id="@+id/usrName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/black"
            android:text="Username"/>

    </LinearLayout>



</LinearLayout>